# fastapi-postgresql-taefik

./: docker-compose.yml  pyproject.toml
Dockerfiles/: Dockerfile
app/: init.sh  main.py
app/common/: database.py  logger.py  settings.py
scripts/: build.sh
